# chess

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  Rocket.toml  deviances  timestamps.txt
.github/workflows/: rust.yml
benches/: ai_bench.rs
gui/: index.html  package-lock.json  package.json  script.js
rust-engine/: Cargo.toml
rust-engine/src/: main.rs  mv.rs
rust-engine/src/move_gen/computed_moves/: lookup_consts.rs
rust-engine/src/move_gen/pieces/: bishop.rs  common_moves.rs  knight.rs  pawn.rs  queen.rs  rook.rs
rust-engine/src/move_gen/tests/: game_tests.rs  king_tests.rs  mv_test.rs  pawn_tests.rs
rust-engine/src/opponent/: engine.rs
src/: game.rs  main.rs  mv.rs
src/computed/: lookup_consts.rs  mod.rs
src/consts/: board_consts.rs  mod.rs
src/game/: board_consts.rs
src/lib/: board.rs  game.rs  lib.rs  mv.rs
src/lib/consts/: position_consts.rs
src/lib/move_gen/computed_moves/: lookup_consts.rs
src/lib/move_gen/pieces/: bishop.rs  common_moves.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/lib/move_gen/tests/: game_tests.rs  king_tests.rs  mv_test.rs
src/lib/opening_book/: book.pgn  stripper.py
src/lib/opponent/: engine.rs  eval_consts.rs  game.rs  game_stage.rs  mod.rs  move_ordering.rs  search.rs  static_eval.rs
src/lib/opponent/tests/: eval_tests.rs  mod.rs  (+1 more)
src/move_gen/: mod.rs
src/move_gen/pieces/: king.rs  knight.rs  pawn.rs  rook.rs
src/move_gen/tests/: game_tests.rs  king_tests.rs  mod.rs  mv_test.rs  pawn_tests.rs
src/opponent/: engine.rs  eval_consts.rs  game_stage.rs  mod.rs  move_ordering.rs  search.rs  static_eval.rs
src/opponent/tests/: eval_tests.rs  mod.rs
src/pieces/: bishop.rs  common_moves.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/pieces/tests/: king_tests.rs  mod.rs  pawn_tests.rs
src/tests/: game_tests.rs  mod.rs  mv_test.rs
