[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.0"
chrono = "0.4"
rand = "*"
vampirc-uci = "0.11"
simple-websockets = "0.1.4"
log = "0.4.17"
fern = "0.6.1"
shellexpand = "2.1.0"

[profile.dev]
overflow-checks = false
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"