[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.0"
chrono = "0.4"
log = "0.4.17"
fern = "0.6.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.5"
warp = {version="*", features = ["tls"]}
tokio-stream = "0.1.9"
permutation = "0.4.1"

[profile.dev]
overflow-checks = false


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"