[package]
name = "shellfish"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shellfishbin"
path = "src/main.rs"

[lib]
name = "shellfishlib"
path = "src/lib/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4"
log = { version = "0.4.17", features = ["release_max_level_off"] }
fern = "0.6.1"
futures-util = "0.3.5"
warp = {version="*", features = ["tls"]}
tokio-stream = "0.1.9"
permutation = "0.4.1"
serde = "1.0.198"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[profile.dev]
overflow-checks = false


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ai_bench"
harness = false
